@@ -1,3 +1,9 @@
+2012-04-29  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el: Fix.
+
+	* init-misc.el (require): Fix highlight-symbol-mode.
+
 2012-04-26  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Fix.
